--- a/003_movie_info_page/index.html
+++ b/003_movie_info_page/index.html
@@ -8,6 +8,9 @@
     <title>Jungle Cinema</title>
     <link rel="stylesheet" href="src/style/reset.css">
     <link rel="stylesheet" href="src/style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700;900&family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -22,9 +25,9 @@
             <h3 class="sr-only">영화 정보 목록</h3>
             <nav class="nav-movie">
                 <ul id="cont-nav" class="list-movieNav">
-                    <li class="on"><a href="#none" class="link-nav">현재 상영 영화</a></li>
-                    <li><a href="#none" class="link-nav">개봉 예정 영화</a></li>
-                    <li><a href="#none" class="link-nav">박스 오피스</a></li>
+                    <li class="on"><a href="#none" class="link-nav">현재상영영화</a></li>
+                    <li><a href="#none" class="link-nav">개봉예정영화</a></li>
+                    <li><a href="#none" class="link-nav">박스오피스</a></li>
                 </ul>
             </nav>
         </header>
@@ -37,7 +40,7 @@
                         <a href="#none" class="link-movie">
                             <img src="src/images/movie_weniv.png" alt="위니브 월드 : 새로운 시대 상세 정보 페이지로 이동합니다.">
                         </a>
-                        <strong class="tit-move sl-ellipsis">위니브 월드 : 새로운 시대</strong>
+                        <strong class="tit-movie sl-ellipsis">위니브 월드 : 새로운 시대</strong>
                         <dl class="list-info">
                             <div>
                                 <dt>개요</dt>
@@ -49,11 +52,11 @@
                             </div>
                             <div>
                                 <dt>개봉</dt>
-                                <dd>2021.09.30</dd>
+                                <dd>2021.03.27</dd>
                             </div>
                             <div>
                                 <dt>출연</dt>
-                                <dd class="multi-ellipsis">라이캣, 소울곰, 개리씨, 자바독, 파이, 썬, 빙키, 뮤라</dd>
+                                <dd class="multi-ellipsis">라이캣, 소울곰, 개리씨, 빙키, 썬, 뮤라, 자바독, 소울곰, 웨이드</dd>
                             </div>
                         </dl>
                     </article>
@@ -63,25 +66,26 @@
                     <article>
                         <h4 class="sr-only">영화 상세 정보</h4>
                         <a href="#none" class="link-movie">
-                            <img src="src/images/movie_weniv.png" alt="위니브 월드 : 새로운 시대 상세 정보 페이지로 이동합니다.">
+                            <span class="sr-only">영화 상세페이지로 이동</span>
+                            <img src="src/images/movie_java.png" alt="눈떠보니 코딩테스트 전날 with JAVA">
                         </a>
-                        <strong class="tit-move sl-ellipsis">위니브 월드 : 새로운 시대</strong>
+                        <strong class="tit-movie sl-ellipsis">눈떠보니 코딩테스트 전날 with JAVA</strong>
                         <dl class="list-info">
                             <div>
                                 <dt>개요</dt>
-                                <dd>판타지</dd>
+                                <dd>스릴러</dd>
                             </div>
                             <div class="item-star">
                                 <dt>평점</dt>
-                                <dd>9.05</dd>
+                                <dd>8.25</dd>
                             </div>
                             <div>
                                 <dt>개봉</dt>
-                                <dd>2021.09.30</dd>
+                                <dd>2021.04.01</dd>
                             </div>
                             <div>
                                 <dt>출연</dt>
-                                <dd class="multi-ellipsis">라이캣, 소울곰, 개리씨, 자바독, 파이, 썬, 빙키, 뮤라</dd>
+                                <dd class="multi-ellipsis">캣, 파이, 썬</dd>
                             </div>
                         </dl>
                     </article>
@@ -91,25 +95,26 @@
                     <article>
                         <h4 class="sr-only">영화 상세 정보</h4>
                         <a href="#none" class="link-movie">
-                            <img src="src/images/movie_weniv.png" alt="위니브 월드 : 새로운 시대 상세 정보 페이지로 이동합니다.">
+                            <span class="sr-only">영화 상세페이지로 이동</span>
+                            <img src="src/images/movie_bootcamp.png" alt="파이썬 부트캠프">
                         </a>
-                        <strong class="tit-move sl-ellipsis">위니브 월드 : 새로운 시대</strong>
+                        <strong class="tit-movie sl-ellipsis">파이썬 부트캠프</strong>
                         <dl class="list-info">
                             <div>
                                 <dt>개요</dt>
-                                <dd>판타지</dd>
+                                <dd>드라마</dd>
                             </div>
                             <div class="item-star">
                                 <dt>평점</dt>
-                                <dd>9.05</dd>
+                                <dd>8.77</dd>
                             </div>
                             <div>
                                 <dt>개봉</dt>
-                                <dd>2021.09.30</dd>
+                                <dd>2021.04.12</dd>
                             </div>
                             <div>
                                 <dt>출연</dt>
-                                <dd class="multi-ellipsis">라이캣, 소울곰, 개리씨, 자바독, 파이, 썬, 빙키, 뮤라</dd>
+                                <dd class="multi-ellipsis">캣, 파이, 썬, 뮤라</dd>
                             </div>
                         </dl>
                     </article>
@@ -119,25 +124,26 @@
                     <article>
                         <h4 class="sr-only">영화 상세 정보</h4>
                         <a href="#none" class="link-movie">
-                            <img src="src/images/movie_weniv.png" alt="위니브 월드 : 새로운 시대 상세 정보 페이지로 이동합니다.">
+                            <span class="sr-only">영화 상세페이지로 이동</span>
+                            <img src="src/images/movie_nginx.png" alt="웹서버 셀럽 NGINX 파헤치기">
                         </a>
-                        <strong class="tit-move sl-ellipsis">위니브 월드 : 새로운 시대</strong>
+                        <strong class="tit-movie sl-ellipsis">웹서버 셀럽 NGINX 파헤치기</strong>
                         <dl class="list-info">
                             <div>
                                 <dt>개요</dt>
-                                <dd>판타지</dd>
+                                <dd>드라마</dd>
                             </div>
                             <div class="item-star">
                                 <dt>평점</dt>
-                                <dd>9.05</dd>
+                                <dd>9.88</dd>
                             </div>
                             <div>
                                 <dt>개봉</dt>
-                                <dd>2021.09.30</dd>
+                                <dd>2021.04.15</dd>
                             </div>
                             <div>
                                 <dt>출연</dt>
-                                <dd class="multi-ellipsis">라이캣, 소울곰, 개리씨, 자바독, 파이, 썬, 빙키, 뮤라</dd>
+                                <dd class="multi-ellipsis">NGINX, 노션</dd>
                             </div>
                         </dl>
                     </article>
@@ -147,25 +153,26 @@
                     <article>
                         <h4 class="sr-only">영화 상세 정보</h4>
                         <a href="#none" class="link-movie">
-                            <img src="src/images/movie_weniv.png" alt="위니브 월드 : 새로운 시대 상세 정보 페이지로 이동합니다.">
+                            <span class="sr-only">영화 상세페이지로 이동</span>
+                            <img src="src/images/movie_meetup.png" alt="어쩌다 밋업">
                         </a>
-                        <strong class="tit-move sl-ellipsis">위니브 월드 : 새로운 시대</strong>
+                        <strong class="tit-movie sl-ellipsis">어쩌다 밋업</strong>
                         <dl class="list-info">
                             <div>
                                 <dt>개요</dt>
-                                <dd>판타지</dd>
+                                <dd>드라마</dd>
                             </div>
                             <div class="item-star">
                                 <dt>평점</dt>
-                                <dd>9.05</dd>
+                                <dd>9.25</dd>
                             </div>
                             <div>
                                 <dt>개봉</dt>
-                                <dd>2021.09.30</dd>
+                                <dd>2021.04.17</dd>
                             </div>
                             <div>
                                 <dt>출연</dt>
-                                <dd class="multi-ellipsis">라이캣, 소울곰, 개리씨, 자바독, 파이, 썬, 빙키, 뮤라</dd>
+                                <dd class="multi-ellipsis">라이켓, 자바독, 소울곰</dd>
                             </div>
                         </dl>
                     </article>
@@ -175,25 +182,26 @@
                     <article>
                         <h4 class="sr-only">영화 상세 정보</h4>
                         <a href="#none" class="link-movie">
-                            <img src="src/images/movie_weniv.png" alt="위니브 월드 : 새로운 시대 상세 정보 페이지로 이동합니다.">
+                            <span class="sr-only">영화 상세페이지로 이동</span>
+                            <img src="src/images/movie_pygame.png" alt="PyGame">
                         </a>
-                        <strong class="tit-move sl-ellipsis">위니브 월드 : 새로운 시대</strong>
+                        <strong class="tit-movie sl-ellipsis">파이게임 어드벤처</strong>
                         <dl class="list-info">
                             <div>
                                 <dt>개요</dt>
-                                <dd>판타지</dd>
+                                <dd>판타지 액션</dd>
                             </div>
                             <div class="item-star">
                                 <dt>평점</dt>
-                                <dd>9.05</dd>
+                                <dd>8.56</dd>
                             </div>
                             <div>
                                 <dt>개봉</dt>
-                                <dd>2021.09.30</dd>
+                                <dd>2021.04.05</dd>
                             </div>
                             <div>
                                 <dt>출연</dt>
-                                <dd class="multi-ellipsis">라이캣, 소울곰, 개리씨, 자바독, 파이, 썬, 빙키, 뮤라</dd>
+                                <dd class="multi-ellipsis">개리씨, 파이썬</dd>
                             </div>
                         </dl>
                     </article>
@@ -203,25 +211,26 @@
                     <article>
                         <h4 class="sr-only">영화 상세 정보</h4>
                         <a href="#none" class="link-movie">
-                            <img src="src/images/movie_weniv.png" alt="위니브 월드 : 새로운 시대 상세 정보 페이지로 이동합니다.">
+                            <span class="sr-only">영화 상세페이지로 이동</span>
+                            <img src="src/images/movie_mbti.png" alt="MBTI">
                         </a>
-                        <strong class="tit-move sl-ellipsis">위니브 월드 : 새로운 시대</strong>
+                        <strong class="tit-movie sl-ellipsis">MBTI는 내 운명</strong>
                         <dl class="list-info">
                             <div>
                                 <dt>개요</dt>
-                                <dd>판타지</dd>
+                                <dd>로맨스</dd>
                             </div>
                             <div class="item-star">
                                 <dt>평점</dt>
-                                <dd>9.05</dd>
+                                <dd>9.02</dd>
                             </div>
                             <div>
                                 <dt>개봉</dt>
-                                <dd>2021.09.30</dd>
+                                <dd>2021.04.12</dd>
                             </div>
                             <div>
                                 <dt>출연</dt>
-                                <dd class="multi-ellipsis">라이캣, 소울곰, 개리씨, 자바독, 파이, 썬, 빙키, 뮤라</dd>
+                                <dd class="multi-ellipsis">라이켓, 자바독, 개리씨</dd>
                             </div>
                         </dl>
                     </article>
@@ -231,25 +240,26 @@
                     <article>
                         <h4 class="sr-only">영화 상세 정보</h4>
                         <a href="#none" class="link-movie">
-                            <img src="src/images/movie_weniv.png" alt="위니브 월드 : 새로운 시대 상세 정보 페이지로 이동합니다.">
+                            <span class="sr-only">영화 상세페이지로 이동</span>
+                            <img src="src/images/movie_pyqt.png" alt="PyQt의 사랑">
                         </a>
-                        <strong class="tit-move sl-ellipsis">위니브 월드 : 새로운 시대</strong>
+                        <strong class="tit-movie sl-ellipsis">PyQt의 사랑</strong>
                         <dl class="list-info">
                             <div>
                                 <dt>개요</dt>
-                                <dd>판타지</dd>
+                                <dd>로맨스</dd>
                             </div>
                             <div class="item-star">
                                 <dt>평점</dt>
-                                <dd>9.05</dd>
+                                <dd>8.81</dd>
                             </div>
                             <div>
                                 <dt>개봉</dt>
-                                <dd>2021.09.30</dd>
+                                <dd>2021.04.08</dd>
                             </div>
                             <div>
                                 <dt>출연</dt>
-                                <dd class="multi-ellipsis">라이캣, 소울곰, 개리씨, 자바독, 파이, 썬, 빙키, 뮤라</dd>
+                                <dd class="multi-ellipsis">파이썬, 큐티</dd>
                             </div>
                         </dl>
                     </article>
@@ -280,7 +290,7 @@
                 <li><a href="#none" class="link-insta">instagram</a></li>
                 <li><a href="#none" class="link-facebook">facebook</a></li>
             </ul>
-            <small class="txt-copy">Copyright &copy; 2021 The Jungle. All rights reserved.</small>
+            <small class="txt-copy">&copy; 2021 The Jungle. All rights reserved.</small>
         </section>
     </footer>
 </body>
