--- a/005_1만시간의법칙/10000hours.html
+++ b/005_1만시간의법칙/10000hours.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,20 +9,40 @@
     <link rel="stylesheet" href="./css/10000hours.css">
     <title>1만 시간의 법칙</title>
 </head>
+
 <body>
     <header>
-        <h1 class="title">
-                <img src="./img/clock.png" alt="background" class="background">
-                <img src="./img/title.png" alt="1만 시간의 법칙" class="title_logo">
+        <h1 class="tit-page">
+            <img src="./img/title.png" alt="1만 시간의 법칙" class="img-tit">
         </h1>
     </header>
     <main>
-        <p class="sub_title">"연습은 어제의 당신보다 당신을 더 낫게 만든다."</p>
-        <article>""image&detail</article>
-        <article>input</article>
-        <article>아마 a태그?</article>
-        <article>result 창</article>
+        <h2 class="sub-tit">
+            <img src="./img/txt_subtitle.png" alt="연습은 어제의 당신보다 당신을 더 낫게 만든다." class="img-sub">
+        </h2>
+        <p class="txt-desc">
+            <span class="newline"><strong>1만 시간의 법칙</strong>은</span>
+            <span class="newline">어떤 분야의 전문가가 되기 위해서는</span>
+            <span class="newline">최소한 1만 시간의 훈련이 필요하다는 법칙이다.</span>
+        </p>
+        <form class="cont-inp">
+            <p>나는 <label><input type="text" placeholder="예)프로그래밍" required></label> 전문가가 될 것이다.</p>
+            <p>그래서 앞으로 매일 하루에 <label><input type="number" placeholder="예)5시간"></label> 시간씩 훈련할 것이다.</p>
+            <button class="btn-exc"><strong>나는 며칠 동안 훈련을 해야 1만 시간이 될까?</strong></button>
+        </form>
+        <section class="cont-result">
+            <h3 class="txt-hide">결과 확인</h3>
+            <p class="txt-wannabe">당신은<strong>프로그래밍</strong>전문가가 되기 위해서</p>
+            <p class="txt-time">대략<strong>5110</strong>일 이상 훈련하셔야 합니다!:)</p>
+            <button class="btn-go"><strong>훈련하러 가기 GO!GO!</strong></button>
+            <button class="btn-share"><strong>공유하기</strong></button>
+        </section>
     </main>
-    <footer>weniv logo, copyright</footer>
+    <footer>
+        <img src="./img/logo.png" alt="weniv" class="img-footer">
+        <p class="txt-footer">&#8251; 본 서비스 내 이미지 및 콘텐츠의 저작권은 주식회사 WeNiv에 있습니다.</p>
+        <p class="txt-footer">수정 및 재배포, 무단 도용 시 법적인 문제가 발생할 수 있습니다.</p>
+    </footer>
 </body>
+
 </html>
